Arrays#asList replaced by List#of